--- a/gnomes-knoll/src/app/welcome/welcome.component.html
+++ b/gnomes-knoll/src/app/welcome/welcome.component.html
@@ -1,3 +1,9 @@
-<div>
-    <welcome-card></welcome-card>
+<div class="container" 
+     fxLayout 
+     fxLayout.xs="column"
+     fxLayoutAlign="center" 
+     fxLayoutGap="20px"
+     fxLayoutGap.xs="0" 
+     >
+    <welcome-card fxFlex="100%"></welcome-card>
 </div>
