--- a/gnomes-knoll/src/app/welcome/welcome.component.css
+++ b/gnomes-knoll/src/app/welcome/welcome.component.css
@@ -1,1 +1,11 @@
+.container {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+}
 
+.mid-section {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+}
