--- a/gnomes-knoll/src/app/welcome/welcome.component.html
+++ b/gnomes-knoll/src/app/welcome/welcome.component.html
@@ -1,9 +1,8 @@
-<div class="container" 
-     fxLayout 
-     fxLayout.xs="column"
-     fxLayoutAlign="center" 
-     fxLayoutGap="20px"
-     fxLayoutGap.xs="0" 
-     >
-    <welcome-card fxFlex="100%"></welcome-card>
+<div class="container">
+    <welcome-card></welcome-card>
+    <div class="mid-section">
+        <gallery-card></gallery-card>
+        <info-card></info-card>
+    </div>
+    <store-card></store-card>
 </div>
