--- a/gnomes-knoll/src/app/welcome/welcome.component.css
+++ b/gnomes-knoll/src/app/welcome/welcome.component.css
@@ -2,10 +2,13 @@
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
+    justify-content: space-around;
+    background-color: black;
 }
 
 .mid-section {
     display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
+    flex-direction: row;
+    background-color:rgb(56, 145, 56);
+    justify-content: space-around;
 }
