--- a/gnomes-knoll/src/app/welcome/components/info-card/info-card.component.css
+++ b/gnomes-knoll/src/app/welcome/components/info-card/info-card.component.css
@@ -1,8 +1,3 @@
 .main-text-box {
-    background-color: rgb(56, 145, 56);
-    color: rgb(199, 14, 199);
-    text-align: center;
-    border-radius: .2em;
-    border-color: white;
-    flex: 1;
+    height: 10vh;
 }
