--- a/gnomes-knoll/src/app/welcome/components/welcome-card/welcome-card.component.css
+++ b/gnomes-knoll/src/app/welcome/components/welcome-card/welcome-card.component.css
@@ -1,6 +1,3 @@
 .main-text-box {
-    background-color: rgb(56, 145, 56);
-    color: rgb(199, 14, 199);
-    text-align: center;
-    border-radius: .2em;
+    height: 50vh;
 }
