--- a/gnomes-knoll/src/app/welcome/components/store-card/store-card.component.html
+++ b/gnomes-knoll/src/app/welcome/components/store-card/store-card.component.html
@@ -1,4 +1,11 @@
+<style>
+    .main-text-box {
+      background-image: url('assets/dirt.jpg');
+      background-size: cover;
+      background-repeat: no-repeat;
+      height: 30vh;
+    }
+  </style> 
 <div class="main-text-box">
     <h1>Store</h1>
-    <p>Put a roof over our heads by putting our shirts on your backs</p>
 </div>
