--- a/gnomes-knoll/src/app/welcome/welcome.component.html
+++ b/gnomes-knoll/src/app/welcome/welcome.component.html
@@ -1,3 +1,17 @@
+<style>
+    .mid-section {
+      background-image: url('assets/flowers.jpg');
+      background-size: cover;
+      background-repeat: no-repeat;
+      display: flex;
+      flex-direction: row;
+      background-color:rgb(56, 145, 56);
+      justify-content: space-around;
+      align-items: center;
+      height: 40vh;
+    }
+</style> 
+
 <div class="container">
     <welcome-card></welcome-card>
     <div class="mid-section">
