Refactored to reduce number of components, routing

--- a/gnomes-knoll/src/app/info/info.component.html
+++ b/gnomes-knoll/src/app/info/info.component.html
@@ -1,1 +1,28 @@
-<p>info works!</p>
+
+    <div class="InfoComponent">
+        <h1>Info Component</h1>
+    
+        <p>
+            This will be the written portion of the website <br>
+            <br>
+            Will Include several components, will likely be a web page which scrolls, has a picture than descriptions of
+            Richard and then of Karen <br>
+            <br>
+        </p>
+        <div class="Richard">
+            <div class="written">
+    
+            </div>
+            <div class="image">
+    
+            </div>
+        </div>
+        <div class="Karen">
+            <div class="written">
+    
+            </div>
+            <div class="image">
+    
+            </div>
+        </div>
+    </div>  
