basic image carousel working

--- a/gnomes-knoll/src/app/gallery/gallery.component.html
+++ b/gnomes-knoll/src/app/gallery/gallery.component.html
@@ -1,1 +1,7 @@
-<p>gallery works!</p>
+<div class="heading">
+    <h1>Our Existing Work</h1>
+</div>
+<div class="image-container">
+    <img src="assets/{{images[index]}}" alt="Our Work">
+</div>
+<button (click)="nextImage()">Next Image</button>
