--- a/gnomes-knoll/src/app/info/info.component.html
+++ b/gnomes-knoll/src/app/info/info.component.html
@@ -3,6 +3,23 @@
         height: 10vh;
         background-color: blue;
         text-align: center;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-family: Georgia, 'Times New Roman', Times, serif;
+        font-weight: 666;
+        color: white;
+        -webkit-text-stroke-width: .75px;
+        -webkit-text-stroke-color: black;
+        border-style: outset;
+        border-width: .6em;
+        padding: .4em;
+        border-color: rgb(20, 116, 194);
+        background-color: rgb(12, 94, 201);
+    }
+
+    .intro-paragraph {
+        background-color: rgb(8, 54, 8);
     }
 
     .Richard {
@@ -33,6 +50,15 @@
     h1 {
         margin: 0%;
     }
+
+    p {
+        margin: 0%;
+        font-size: x-large;
+        font-family: Georgia, 'Times New Roman', Times, serif;
+        color: rgb(199, 35, 199);
+        -webkit-text-stroke-width: .05px;
+        -webkit-text-stroke-color: black;
+    }
 </style>
 <div class="heading">
     <h1>About Us</h1>
@@ -58,7 +84,8 @@
     <img src="assets/richard.jpg" alt="Richard the Gnome">
     <div class="richard-info">
         <p> 
-            The hands and back behind much of the work we do, Richard is a real life Santa-Claus
+            The hands and back behind much of the work we do, Richard has a keen eye for landscapes which enables
+            him to give you the most for your space, regardless of how much space he had to work with. 
         </p>
     </div>
 </div>
