--- a/gnomes-knoll/src/app/info/info.component.html
+++ b/gnomes-knoll/src/app/info/info.component.html
@@ -1,7 +1,8 @@
 <style>
+
     .heading {
         height: 10vh;
-        background-color: blue;
+        background-image: url('assets/skyandtrees.jpeg');
         text-align: center;
         display: flex;
         align-items: center;
@@ -19,11 +20,12 @@
     }
 
     .intro-paragraph {
-        background-color: rgb(8, 54, 8);
+        background-image: url('assets/trees.jpeg');
+        background-size: cover;
     }
 
     .Richard {
-        height: 50vh;
+        height: 125vh;
         width: 100%;
         background-color: green;
         display: flex;
@@ -35,7 +37,7 @@
     }
 
     .Karen {
-        height: 50vh;
+        height: 125vh;
         width: 100%;
         background-color: purple;
         display: flex;
@@ -55,7 +57,7 @@
         margin: 0%;
         font-size: x-large;
         font-family: Georgia, 'Times New Roman', Times, serif;
-        color: rgb(199, 35, 199);
+        color: white;
         -webkit-text-stroke-width: .05px;
         -webkit-text-stroke-color: black;
     }
@@ -64,37 +66,85 @@
     <h1>About Us</h1>
 </div>
 <div class="intro-paragraph">
-    <p>
-        Gnomes Knoll Farms and Services is a full service landscaping and flower company <br>
-        <br>
-        We specialize in transformning drab squares of brown withered grass and lifeless earth into
-        beautiful mosiacs of vibrant plant life. <br>
-        <br>
-        These mosiacs are crafted through our personalized partnership with artisinal flowers, shrubs, hedges, ivy, anything which
-        helps transform your space from where you live to where you feel alive <br>
-        <br>
-        Though the effects on your property are often drastic, all our work is organized planned and for the large part 
-        executed by but two humble Gnomes. <br>
-    </p>
+    <div class="intro-decorator">
+        <p>
+            Gnomes Knoll Farms and Services is a full service landscaping and flower company <br>
+            <br>
+            We specialize in transformning drab squares of brown withered grass and lifeless earth into
+            beautiful mosiacs of vibrant plant life. <br>
+            <br>
+            These mosiacs are crafted through our personalized partnership with artisinal flowers, shrubs, hedges, ivy, anything which
+            helps transform your space from where you live to where you feel alive <br>
+            <br>
+            The full service nature of our buisiness means that our work doesn't have to stop when our flowers are designed grown and planted in 
+            your home. We also specialize in the nurturing and caring of these plants. <br>
+            <br>
+            Our gnomes are more than happy to either nurture these plants themselves or pass along the knowledge of their light nutrition and care needs 
+            to you, whichever best fits your lifestyle and goals. <br>
+            <br>
+            We care deeply for our plants and customers, and are always doing as much as we can to help them thrive in whatever ways and means best suit 
+            our customers lives and preferences <br>
+            <br>
+            Whatever your preferences may be, it is our hope that the addition of our beautiful plants will make whatever space you have pop with vibrant colors
+            which make your space pop and feel more like home <br>
+            <br>
+            Though the effects on your property are often drastic, all our work is organized planned and for the large part 
+            carried out by two humble Gnomes. <br>
+        </p>
+    </div>
 </div>
 <div class="heading">
     <h2>Meet Richard and Karen</h2>
 </div>
-<div class="Richard">
-    <img src="assets/richard.jpg" alt="Richard the Gnome">
-    <div class="richard-info">
-        <p> 
-            The hands and back behind much of the work we do, Richard has a keen eye for landscapes which enables
-            him to give you the most for your space, regardless of how much space he had to work with. 
-        </p>
+<div class="gnomes">
+    <div class="Richard">
+        <img src="assets/richard.jpg" alt="Richard the Gnome">
+        <div class="richard-info">
+            <p> 
+                The calloused hands and skilled eye behind all of what we accomplish at Gnomes Services, Richard's hard work and keen eye for 
+                design are some of the biggest drivers of change offered by Gnomes Services. Richard has been in this buisiness for more than 20 years,
+                and that experience informs everything he does. Not only has time taught him how to finish a hard days work long after others throw in the towell
+                or take the easy road to completion, experience has given Richard a sixth sense for what is possible within landscapes. <br>
+                <br>
+                With the Gnomes Services experience, there is no design team and there are no design fees. Richard simply has to look at your space 
+                and often the possibilities dance in front of his minds eye without a second though, like the true scultor in stone and plant life that he is.
+                He offers his vision to anyone who will take the time to speak with him. Though Richard has what has been referred to as a "crusty exterior," he is 
+                also a very warm and giving person and never places a premium on his design or wisdom. <br>
+                <br>
+                Richard's giving nature and dedication is ever present in his work. While many of his contemporaries simply charm their way into as many 
+                clients as they can collect and then shell the work and labor out to whoever they can pay the least, Richard offers a much more hands on 
+                approach. He simply cares too much about the clients he has to take on more than he knows he can handle or to use labor which he knows is 
+                not getting the job done. This involves him spending a lot of personal time at job sites both instructing any additional labor and shouldering
+                as much of the work as he can. <br>
+                <br>
+                Richard offers a great wealth of design sensibility, hard work, and personal attention. His contributions are a significant piece of the 
+                home baked pie that is Gnomes Gnoll services. 
+            </p>
+        </div>
     </div>
-</div>
-<div class="Karen">
-    <div class="karen-info">
-        <p>
-            Our resident flower girl and the heart of the gnoll, Karen is an artist who paints landscapes with 
-            pastels of flowers
-        </p>
+    <div class="Karen">
+        <div class="karen-info">
+            <p>
+                Our resident flower girl and the heart of the gnoll, Karen is an artist who paints vibrant landscapes in pastels of purposeful and colorful flowers.
+                Richard often provides the structure and hard lines of our landscpae design, but it is up to Karen to paint within these lines with as many wonderful
+                colors shapes and sizes as can fit into your space. Much of what make Karen's flower arrangements so special is the way they feature several different 
+                specied of flower cohabitiating to compose one wonderful mosaic. Feel free to check out our gallery page to get a first hand impression of Karen's handiwork. <br>
+                <br>
+                Like Richard, Karen offers years and years of expereince. She has actually been in flowers for longer than Richard has been in landscaping. Some of more 
+                storied inhabitants of our surrounding areas may remember the unique homegrown spelendor of Gnomes Gnoll Farm, a garden shop which Karen ran for many many years.
+                Several of our clients met Karen within the context of that old store, and have continued to use her services as a provider and nurturer of flowers for upwards of 
+                30 years. <br>
+                <br>
+                However, much like her counterpart, Karen is very giving with her knowledge and always happy to meet a clients needs in a way which is satisfactory to them. 
+                Unlike a lot of her contemporaries, Karen does not insist on doing all the maintenance of her flowers herself. Though she loves to look after the plant life 
+                and is more than happy to do it for those cusomters who prefer an experts touch, she also understands the joy of raising these plants and will gladly teach anyone 
+                who is interested where to position their plants in order to get the correct amount of light based on the orientation and shade of their property as well as when and 
+                what to give each plant to ensure that they all grow to their fullest potential. <br>
+                <br>
+                Karen has a very nurturing and caring spirit, making her beloved by plants and people alike. Whatever the goals of your garden might be, with someone like Karen at your side,
+                those goals are going to be far more attainable and the process will be far less stressful than trying to go it alone. 
+            </p>
+        </div>
+        <img src="assets/karen.jpg" alt="Karen the Gnome">
     </div>
-    <img src="assets/karen.jpg" alt="Karen the Gnome">
 </div>
