--- a/gnomes-knoll/src/app/gallery/gallery.component.html
+++ b/gnomes-knoll/src/app/gallery/gallery.component.html
@@ -4,7 +4,9 @@
     }
 
     .heading {
-        background-image: url('assets/blue-sky.jpg');
+        background-image: url('assets/sky.jpeg');
+        background-size: 100% 100%;
+
     }
 
     .image-container {
