--- a/gnomes-knoll/src/app/welcome/welcome.component.html
+++ b/gnomes-knoll/src/app/welcome/welcome.component.html
@@ -2,31 +2,8 @@
     Style is included in html so that background images function
 -->
 <style>
-    .welcome-card {
-      background-image: url('assets/blue-sky.jpg');
-      background-size: cover;
-      background-color:rgb(56, 145, 56);
-      height: 30vh;
-      text-align: center;
-      align-items: center;
-      display: flex;
-      justify-content: center;
-    }
 
-    .welcome-decorator {
-        font-family: Georgia, 'Times New Roman', Times, serif;
-        font-weight: 666;
-        color: white;
-        -webkit-text-stroke-width: .75px;
-        -webkit-text-stroke-color: black;
-        border-style: outset;
-        border-width: .6em;
-        padding: .4em;
-        border-color: rgb(20, 116, 194);
-        background-color: rgb(12, 94, 201);
-    }
-    
-    .mid-section {
+    .body {
       background-image: url('assets/farm.jpeg');
       background-size: cover;
       background-repeat: no-repeat;
@@ -35,10 +12,10 @@
       background-color:rgb(56, 145, 56);
       justify-content: space-around;
       align-items: flex-end;
-      height: 60vh;
+      height: 100vh;
     }
 
-    .mid-decorator {
+    .body-decorator {
         display: flex;
         flex-direction: column;
         font-family: Georgia, 'Times New Roman', Times, serif;
@@ -47,6 +24,43 @@
         padding: .4em;
         -webkit-text-stroke-color: rgb(147, 14, 187);
         align-items: center;
+    }
+
+    .welcome-card {
+        width: 33vw;
+        height: 95vh;
+        object-fit: cover;
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: center;
+        background-color: black;
+        bottom: 4.20vh;
+        position: relative;
+        line-height:4em;
+        -webkit-box-shadow: 0 0 15px black;
+        box-shadow: 0 0 15px black;
+    }
+
+    .heading {
+        position: relative;
+        color: white;
+        text-align: center;
+        width: 35vh;
+        bottom: 2vh;
+        top: 5vh;
+    }
+
+    .image-container {
+        display: flex;
+        object-fit: scale-down;
+        justify-content: flex-start;
+        flex-direction: column;
+        text-align: center;
+        width: 25vw;
+        height: 50vh;
+        position: relative;
+        top: 7vh;
     }
 
     .store-card {
@@ -63,40 +77,60 @@
     }
 
     button {
-       width: 16em;
-       height: 2em;
+       width: 30em;
+       height: 5em;
        background-color: black;
-       color: white;
+       color: rgb(147, 14, 187);;
        border-color: black;
+       -webkit-box-shadow: 0 0 15px black;
+        box-shadow: 0 0 15px black;
+    }
+
+
+    img {
+        width: 100%;
+        height: 100%;
     }
 
     h1 {
-        margin-top: 0em;
-        margin-bottom: 0em;
+        color: white;
     }
+
 </style> 
 
 <div class="container">
-    <div class="welcome-card">
-        <div class="welcome-decorator">
-            <h1> Welcome to Gnomes Knoll Services </h1>
-        </div>
+    <div class="sky">
+
     </div>
-    <div class="mid-section">
+    <div class="body">
         <div class="gallery-card">
-            <div class="mid-decorator">
+            <div class="body-decorator">
                 <button  (click)="galleryNav()">View Our Work</button>
             </div>
         </div>
+        <div class="welcome-card">
+            <div class="heading">
+                <h1>
+                    Welcome To
+                </h1>
+            </div>
+            <div class="image-container">
+                <img src="assets/logo.jpeg" alt="">
+            </div>
+            <div class="heading">
+                <h2>
+                    A Full Service Landscaping and Gardning Company
+                </h2>
+            </div>
+            
+        </div>
         <div class="info-card">
-            <div class="mid-decorator">
+            <div class="body-decorator">
                 <button  (click)="infoNav()">Meet the Gnomes</button>
             </div>
         </div>
     </div>
     <div class="store-card">
-        <h1>
-            Buy our shit
-        </h1>
+        <button  (click)="storeNav()">Buy Our Shit</button>
     </div>
 </div>
