added dressing for store

--- a/gnomes-knoll/src/app/store/store.component.html
+++ b/gnomes-knoll/src/app/store/store.component.html
@@ -1,1 +1,21 @@
-<p>store works!</p>
+<style>
+    .heading {
+        background-image: url('assets/sky.jpeg');
+        background-size: 100% 100%;
+    }
+</style>
+
+<div class="heading">
+    <h1>Our Existing Work</h1>
+</div>
+<div class="store-container">
+    <div class="stone-container">
+        <img src="assets/stoneleft.jpeg" class="stone-image">
+    </div>
+    <div class="store">
+
+    </div>
+    <div class="stone-container">
+        <img src="assets/stoneright.jpeg" class="stone-image">
+    </div>
+</div>
