final push of the semester, new images and final edits

--- a/gnomes-knoll/src/app/gallery/gallery.component.html
+++ b/gnomes-knoll/src/app/gallery/gallery.component.html
@@ -13,6 +13,16 @@
         background-image: url('assets/mamakitty.jpeg');
         background-size: cover;
     }
+
+    button {
+       width: 30em;
+       height: 5em;
+       background-color: black;
+       color: rgb(147, 14, 187);;
+       border-color: black;
+       -webkit-box-shadow: 0 0 15px black;
+        box-shadow: 0 0 15px black;
+    }
 </style>
 
 <div class="heading">
