--- a/gnomes-knoll/src/app/info/info.component.html
+++ b/gnomes-knoll/src/app/info/info.component.html
@@ -84,22 +84,22 @@
     </div>
     <div class="about">
         <p>
-            The hands are heart behind everything we do here at Gnomes Services, 
+            The hands and heart behind everything we do here at Gnomes Services, 
             Karen and Richard have been working together for over 20 years. <br>
             <br>
             Karen ran Gnomes Knoll farm before she met Richard, where she began expressing
             a vision in flowers which has allowed her to continuously satisfy customers. Some
             of our customer have been trusting Karen for their flowers for over 30 years! <br>
             <br>
-            Richard has been working with stone for 20 years, and in that time he has used a 
+            Richard has been working with stone for over 20 years, and in that time he has used a 
             variety of materials and designs to provide spaces with structures both to augment 
             a space's structure and to provide Karen's flowers with a beutiful framwork which to 
-            inhabit <br>
+            inhabit. <br>
             <br>
             Whatever your needs are, the humble hands of Gnomes Services will not only provide 
             you with any flowers folliage or stonework which you might require, we also offer 
             comprehensive maintenance on all our services. If you'd like us to cut the grass water the 
-            flowers protect against pests and insects or even blow your leaves, we're here to help
+            flowers protect against pests and insects or even blow your leaves, we're here to help.
 
 
         </p>
