--- a/gnomes-knoll/src/app/store/store.component.html
+++ b/gnomes-knoll/src/app/store/store.component.html
@@ -6,14 +6,31 @@
 </style>
 
 <div class="heading">
-    <h1>Our Existing Work</h1>
+    <h1>Browse Our Wares</h1>
 </div>
 <div class="store-container">
     <div class="stone-container">
         <img src="assets/stoneleft.jpeg" class="stone-image">
     </div>
     <div class="store">
-
+        <div class="item"> 
+            mens short sleve shirt
+        </div>
+        <div class="item">
+            ladies short sleve shirt
+        </div>
+        <div class="item">
+            mens long sleve shirt 
+        </div>
+        <div class="item"> 
+            mens short sleve shirt
+        </div>
+        <div class="item">
+            hat 
+        </div>
+        <div class="item">
+            hoodie
+        </div>
     </div>
     <div class="stone-container">
         <img src="assets/stoneright.jpeg" class="stone-image">
