--- a/gnomes-knoll/src/app/welcome/welcome.component.html
+++ b/gnomes-knoll/src/app/welcome/welcome.component.html
@@ -119,7 +119,7 @@
             </div>
             <div class="heading">
                 <h2>
-                    A Full Service Landscaping and Gardning Company
+                    A Full Service Landscaping and Gardening Company
                 </h2>
             </div>
             
@@ -131,6 +131,6 @@
         </div>
     </div>
     <div class="store-card">
-        <button  (click)="storeNav()">Buy Our Shit</button>
+        <button  (click)="storeNav()">Store</button>
     </div>
 </div>
